feat: Add dismiss button for captured transcript and handle its functionality

--- a/popup.html
+++ b/popup.html
@@ -64,6 +64,7 @@
             <strong>Transcript Captured!</strong>
             <p>Auto-captured from video captions</p>
           </div>
+          <button id="dismiss-captured" class="btn-dismiss" title="Dismiss">✕</button>
         </div>
       </div>
 
